--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,5 @@
     <color name="colorPrimary">#263238</color>
     <color name="colorPrimaryDark">#000a12</color>
     <color name="colorAccent">#4f5b62</color>
-    <color name="colorBackground">#e0e0e0</color>
+    <color name="colorBackground">#f0f0f0</color>
 </resources>
