--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="timer_font_size">20sp</dimen>
-    <dimen name="question_font_size">14sp</dimen>
+    <dimen name="question_font_size">24sp</dimen>
+    <dimen name="standard_margin">16dp</dimen>
+    <dimen name="icon_size">48dp</dimen>
+    <dimen name="zero_height">0dp</dimen>
 </resources>
