--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,16 +6,17 @@
     android:fillViewport="true"
     tools:context="com.modashmo.nhlquizz.MainActivity">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/zero_height"
-        android:orientation="vertical"
+        android:layout_height="wrap_content"
         android:padding="@dimen/standard_margin">
 
         <LinearLayout
+            android:id="@+id/layout_top"
+            android:layout_marginBottom="@dimen/standard_margin"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/zero_height"
-            android:layout_weight="2"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
             android:orientation="vertical">
 
             <TextView
@@ -29,41 +30,32 @@
 
         <LinearLayout
             android:id="@+id/layout_answers"
+            android:layout_marginBottom="@dimen/standard_margin"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/zero_height"
-            android:layout_weight="4"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/layout_top"
             android:background="@color/colorBackground"
             android:orientation="vertical"
-            android:padding="@dimen/standard_margin">
+            android:padding="8dp">
 
         </LinearLayout>
 
         <RelativeLayout
             android:id="@+id/layout_bottom"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/zero_height"
-            android:layout_weight="3"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/image_icon"
-                android:layout_width="@dimen/icon_size"
-                android:layout_height="@dimen/icon_size"
-                android:layout_centerInParent="true"
-                android:layout_margin="@dimen/standard_margin"
-                android:scaleType="centerCrop"
-                android:src="@drawable/nhl" />
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_below="@id/layout_answers">
 
             <Button
                 android:id="@+id/button_check_answer"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/button_height"
                 android:layout_alignParentBottom="true"
-                android:layout_below="@id/image_icon"
                 android:onClick="submitAnswer"
                 android:text="@string/button_submit" />
 
         </RelativeLayout>
 
-    </LinearLayout>
+    </RelativeLayout>
 </ScrollView>
